Added FAQ section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,12 +6,12 @@ import HeaderLink from "./HeaderLink.astro";
   <nav>
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="/blog">Blog</HeaderLink>
-    <HeaderLink href="/about">About</HeaderLink>
+    <HeaderLink href="/about">FAQ</HeaderLink>
   </nav>
 </header>
 <style>
   header {
-	padding: 1em 0;
+	padding: 1Rem 0;
    
   }
 
