--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,14 @@ import '../styles/global.css';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import BaseHead from '../components/BaseHead.astro';
-const { title, description } = Astro.props;
+
+type Props = {
+  title: string;
+  description: string;
+};
+
+const {title,description}=Astro.props
+
 
 
 ---
