--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,32 +54,35 @@ li {
 
 }
 
-b{
+b {
 	font-weight: 600;
 
 }
-body{
+
+body {
 	display: grid;
 	grid-template-columns: 1fr;
 	min-height: 100vh;
-	margin:0;
+	margin: 0;
 	justify-content: space-between;
-	gap:2em;
+
 }
 
 .content-wrapper {
 	max-width: 800px;
 	margin: 0 auto;
 	padding: 0 1rem;
-	
+
 }
 
 p,
-hr,div,section {
+hr,
+div,
+section {
 	width: clamp(20ch, 100%, 65ch);
 }
 
-hr{
+hr {
 	opacity: 0.2;
 	margin: 1em 0;
 }
