Added My First Blog Article

--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -3,7 +3,7 @@
     <li><b>Studying at</b></li>
     <li>
       <p>
-        <a href="ku.edu.npm" target="_blank" rel="noopener noreferrer"
+        <a href="ku.edu.np" target="_blank" 
           >Kathmandu University,</a
         >
          Currently studying Computer Science and Engineering
