--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,17 +11,13 @@ import HeaderLink from "./HeaderLink.astro";
 </header>
 <style>
   header {
-	padding: 1Rem 0;
-   
+    padding: 1rem 0;
   }
 
-  
   nav {
     display: flex;
     align-items: center;
-    justify-content: left;
-	padding: 1rem;
-	gap: 1rem;
+    margin-top: 2em;
+    gap: 1rem;
   }
- 
 </style>
