--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,50 +1,80 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
-import '../styles/global.css';
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import FormattedDate from "../components/FormattedDate.astro";
+import "../styles/global.css";
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
+<!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={title} description={description} />
+  <head>
+    <BaseHead title={title} description={description} />
+    <style is:global>
+      body {
+        padding-left: 1em;
+      }
+
+      .blog-head {
+        margin-top: 2em;
+        margin-bottom: 2em;
+      }
+      .blog-head h1 {
+      }
+      .blog-date {
+        font-size: 0.9em;
+        color: #666;
+      }
+
+      .blog-body {
+        margin-top: 2em;
+        margin-bottom: 2em;
+        line-height: 1.75em;
+        font-size: 1.12rem;
+      }
+      .blog-body blockquote {
+		font-family: cursive;
 		
-	</head>
+      }
+      .blog-body strong {
+        font-weight: 500;
+      }
 
-	<body class="content-wrapper">
+	  .blog-body ::selection{
+		background: #ff0;
+	  }
+    </style>
+  </head>
 
-		<Header />
-		<main >
-			
-			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
-						<h1>{title}</h1>
-						<hr />
-					</div>
-					<slot />
-				</div>
-			</article>
-		</main>
-		<Footer />
-	</body>
+  <body>
+    <div class="content-wrapper">
+      <Header />
+      <main>
+        <div class="blog-head">
+          <h1>{title}</h1>
+          <p class="blog-date">
+            <FormattedDate date={pubDate} />
+            {
+              updatedDate && (
+                <>
+                  {" "}
+                  (Updated: <FormattedDate date={updatedDate} />)
+                </>
+              )
+            }
+          </p>
+          {heroImage && <img src={heroImage} alt={title} />}
+        </div>
+        <div class="blog-body">
+          <slot />
+        </div>
+      </main>
+      <Footer />
+    </div>
+  </body>
 </html>
