--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,34 +1,38 @@
 ---
-import '../styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import BaseHead from '../components/BaseHead.astro';
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import BaseHead from "../components/BaseHead.astro";
 
 type Props = {
   title: string;
   description: string;
 };
 
-const {title,description}=Astro.props
-
-
-
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
-    <BaseHead
-        title={title}
-        description={description}
-        
-    />
+    <BaseHead title={title} description={description} />
   </head>
   <body>
     <div class="content-wrapper">
-    <Header/>
-    <slot />
-  </div>
-  <Footer/>
+      <Header />
+      <slot />
+    </div>
+    <Footer />
+    
   </body>
 </html>
+
+
+<style is:global>
+  p,
+  hr,
+  div,
+  section {
+    ;
+  }
+</style>
