--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -34,6 +34,8 @@ const posts = (await getCollection("blog")).sort(
 <style>
   .blog-page {
     
+    margin-top: 4rem;
+    
   }
 
   .blog-page h1 {
