--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,5 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
 
-/* Resets */
+/* CSS Resets */
 *,
 *::before,
 *::after {
@@ -13,13 +8,11 @@
 	box-sizing: border-box;
 }
 
+/* Layout styles */
+
 :root {
-
 	--paragraph-color: #4b5563;
-
 }
-
-/* Typography */
 
 html {
 	font-size: 16px;
@@ -39,13 +32,15 @@ img {
 }
 
 a {
-	color: #333;
-	text-decoration: none;
+	 color: #333;
+	text-decoration: none; 
+	
 	transition: all 0.1s ease-in-out;
 }
 
 a:hover {
 	color: #b0b0b0;
+	text-decoration: none;
 
 }
 
