--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -46,7 +46,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       }
 
 	  .blog-body ::selection{
-		background: #ff0;
+		background: rgb(0, 255, 72);
 	  }
     </style>
   </head>
@@ -57,6 +57,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       <main>
         <div class="blog-head">
           <h1>{title}</h1>
+          {heroImage && <img src={heroImage} alt={title} />}
           <p class="blog-date">
             <FormattedDate date={pubDate} />
             {
@@ -68,7 +69,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
               )
             }
           </p>
-          {heroImage && <img src={heroImage} alt={title} />}
+        
         </div>
         <div class="blog-body">
           <slot />
