Fix links and update content in Education.astro, delete unnecessary blog post, add new blog post about ReactJS, and update content in The-Tale-of-Sun-and-The-Moon.md

--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -3,9 +3,9 @@
     <li><b>Studying at</b></li>
     <li>
       <p>
-        <a href="ku.edu.np" target="_blank" 
-          >Kathmandu University,</a
-        >
+        <a href="https://ku.edu.np/" target="_blank" rel="noopener noreferrer">
+          Kathmandu University,
+          </a>
          Currently studying Computer Science and Engineering
       </p>
     </li>
