--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,79 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="FAQ" description="This is the About page">
-  <section >
-    <h1>FAQ</h1>
-
-    <div class="faq-section">
-      <div class="faq">
-        <div class="ques">What is My name?</div>
-        <div class="ans hide">
-          <p class="">My name is Santosh, please remember it👽.</p>
-        </div>
-      </div>
-      <div class="faq">
-        <div class="ques">What is My name?</div>
-        <div class="ans hide">
-          <p class="">My name is Santosh, please remember it👽.</p>
-        </div>
-      </div>
-      <div class="faq">
-        <div class="ques">What is My name?</div>
-        <div class="ans hide">
-          <p class="">My name is Santosh, please remember it👽.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+<Layout title="About Me" description="This is about me page!">
+  <h1>
+    Faq
+  </h1>
 </Layout>
-
-
-<script>
-  const ques = document.querySelectorAll('.faq .ques');
-    const ans= document.querySelectorAll('.faq .ans');
-    for(let i=0;ques.length;i++){
-      ques[i]?.addEventListener('click',()=>{
-        ans[i]?.classList.toggle('hide')
-      }
-      )
-    }
-   
-  
-</script>
-
-<style>
-  .faq-section {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-  }
- 
-  .faq-section .ques {
-    background-color: #1f2937;
-    color: white;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    border: none;
-    cursor: pointer;
-    text-align: left;
-  }
-
-  .faq-section p {
-    padding: 1rem;
-
-    border-radius: 0.5rem;
-
-    box-shadow: 1px 3px 3px 0px grey;
-  }
-
-  .faq .hide {
-    /* max-height: 0px; */
-    overflow: hidden;
-
-  }
-
-
-</style>
