--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,29 +3,19 @@ import Introduction from "../components/Introduction.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import Layout from "../layouts/Layout.astro";
 import Education from "../components/Education.astro";
+import Aboutme from "../components/Aboutme.astro";
+import Project from '../components/Project.astro'
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   <main>
     <Introduction />
 	<Education />
-
-    <div class="more-about">
-      <b> More about me</b>
-
-      <p>
-        Apart from my work, I'm all about sharing knowledge, fostering growth,
-        and building strong developer communities – <i>specially through mentoring.</i>
-      </p>
-      <p>
-        If you're interested in my work and/or skillsets, you can always get in
-        touch at
-        <b><a href="mailto:ymanoutube@gmail.com">ymanoutube@gmaillcom</a></b>
-      </p>
-    </div>
+  <Project/>
+  <Aboutme/>
+  
   </main>
 </Layout>
-
 <style is:global>
 
   a{
