New Blog Sustainable Programming added

--- a/src/components/Blogs.astro
+++ b/src/components/Blogs.astro
@@ -14,7 +14,7 @@ const blogs = posts.slice(0, 3);
           blogs.map((item) => (
               
           <p>
-                  <a href="./" target="_blank" rel="noopener noreferrer">
+                  <a href={`/blog/${item.slug}/`} target="_blank" rel="noopener noreferrer">
                       {item.data.title}
                   </a>
                  
