--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -21,7 +21,9 @@
   .education ul {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    gap: 0.5rem;
   }
+  
 
   .education ul a {
     font-weight: 500;
