Update project source links

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -10,7 +10,9 @@ import project from './project.js'
       {
           project.map((item) => (
               <p>
-                  <a href={item.source} target="_blank" rel="noopener noreferrer">
+                <a href="https://ku.edu.np/" target="_blank" rel="noopener noreferrer">
+                  <a href=`https://${item.source}` target="_blank" rel="noopener noreferrer">
+
                       {item.name}
                   </a>
                   {item.description}
