--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -5,7 +5,7 @@
 <div class="introduction">
   <h1>Hey there! Santosh here 👋🏻</h1>
   <p>
-    A passionate Web developer dedicated to delivering exceptional digital
+    A passionate Computer Engineer dedicated to delivering exceptional digital
     experiences, creating scalable, secure & performant solutions, exploring
     emerging technologies and continuously striving on delivering excellence
   </p>
